backend/build_error.txt
    Checking grapes-backend v0.1.0 (D:\2-Mozakra\Projects\GP-Project\Grapes\grapes-editor\backend)
error[E0599]: no variant or associated item named `InternalServerError` found for enum `ApiError` in the current scope
   --> src\routes\generate.rs:243:61
    |
243 |         zip.start_file(path, options).map_err(|e| ApiError::InternalServerError(e.to_string()))?;
    |                                                             ^^^^^^^^^^^^^^^^^^^ variant or associated item not found in `ApiError`
    |
   ::: src\error.rs:13:1
    |
 13 | pub enum ApiError {
    | ----------------- variant or associated item `InternalServerError` not found for this enum

error[E0599]: no variant or associated item named `InternalServerError` found for enum `ApiError` in the current scope
   --> src\routes\generate.rs:245:65
    |
245 |         zip.write_all(content.as_bytes()).map_err(|e| ApiError::InternalServerError(e.to_string()))?;
    |                                                                 ^^^^^^^^^^^^^^^^^^^ variant or associated item not found in `ApiError`
    |
   ::: src\error.rs:13:1
    |
 13 | pub enum ApiError {
    | ----------------- variant or associated item `InternalServerError` not found for this enum

error[E0599]: no variant or associated item named `InternalServerError` found for enum `ApiError` in the current scope
   --> src\routes\generate.rs:443:40
    |
443 |     zip.finish().map_err(|e| ApiError::InternalServerError(e.to_string()))?;
    |                                        ^^^^^^^^^^^^^^^^^^^ variant or associated item not found in `ApiError`
    |
   ::: src\error.rs:13:1
    |
 13 | pub enum ApiError {
    | ----------------- variant or associated item `InternalServerError` not found for this enum

For more information about this error, try `rustc --explain E0599`.
error: could not compile `grapes-backend` (bin "grapes-backend") due to 3 previous errors
